modificar lab1 y agregar lab3.css

--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -2,6 +2,10 @@
 <html lang="es">
 <title>Laboratorio 1: Introduccion</title>
 	<meta charset="UTF-8">
+
+<head>
+	<link rel="stylesheet" href="lab3.css">
+</head>
 <body>
 	<header>
 		<h1>Laboratorio 1</h1>
@@ -10,7 +14,7 @@
 
 	
 	<article id="Informacion">
-		<table border="2px">
+		<table >
 			<thead>Informacion de Contacto</thead>
 			<tr>
 				<td>Nombre: </td>
@@ -158,7 +162,7 @@
 	<hr>
 	<br>
 
-	<article id="Preguntas">
+	<article id="Preguntas" class="preg">
 		<h1>Preguntas</h1>
 		<br>
 		<br>
@@ -218,6 +222,26 @@
 		<br>
 		<strong>¿Qué tanto soporte HTML5 tiene el navegador que utilizas? Puedes utilizar la siguiente página para descubrirlo: http://html5test.com/ (Al responder la pregunta recuerda poner el navegador que utiliza</strong>
 		<p>Opera 50.0, score: 520/555, los principales problemas son: video, audio, 2D graphics y seguridad.</p>
+	</article>
+	<br>
+	<br>
+	<hr>
+	<br>
+	<article id="PreguntasCSS" class="preg">
+		<strong>Como ingeniero de Software ¿Cuál es tu recomendación sobre el uso de !important en un CSS?</strong>
+		<p>Lo considero bastannte importante, ya que es gtacias a esta herramienta que se puede asegurar uno que ciertas caracteristicas no se sobre escriban. Tambien permite hacer combianaciones entre selectores.</p>
+		<br>
+		<br>
+		<strong>Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?</strong>
+		<p>Ya que  es importante tener en cuenta la resolucion de la imagen para utilizarla de esta manera. Tmabien hay que tener en cuenta que una imagen de fondo no debe de llamar mucho la atención ya que lo importante debe de estar en el contenido de la pagina. Por ultimo tambien es importante mencionar que una imagen en el fondo puede hacer que ciertos elementos se desaparescan.</p>
+		<br>
+		<br>
+		<strong>Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</strong>
+		<p>La que mas recomiendo utilizar es la de % en  especial cuando se esta utilizando en elementos grandes que se esperan que cubran la pantalla entera. "px" lo recomiendo usar cuando quieres espacios entre textos o elementos mas pequeños.</p>
+		<br>
+		<br>
+		<strong>¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</strong>
+		<p>Porque elimina todos los datos que no corresponden a las instrucciones necesarias para afectar el archivo, eficientando el uso de recursos.</p>
 	</article>
 	<br>
 	<br>
