Cambiar indice a derecha, y Minify CSS

--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -6,9 +6,9 @@
 <head>
 	<link rel="stylesheet" href="lab3.css">
 </head>
-<body>
+<body id="header">
 	<header>
-		<h1>Laboratorio 1</h1>
+		<h1><a href="Lab1.html#header" id="inicio"> Laboratorio 1</a></h1>
 	</header>
 	<hr>
 
@@ -35,25 +35,23 @@
 		</table>
 		<br>
 		
-		<img src="yo.jpg" width="200px">
+		<img src="yo.jpg" id="yo">
 	</article>
 
-
-	<br>
-	<br>
-	<hr>
-	<br>
-	<article id="indice">
-		<h2>Indice</h2>
-		<ul>
-			<li><a href="Lab1.html#Formulario">Formulario</a> </li>
-			<li><a href="Lab1.html#hobbies">Hobbies</a></li>
-			<li><a href="Lab1.html#Definiciones">Definiciones</a> </li>
-			<li><a href="Lab1.html#Preguntas">Preguntas</a> </li>
-			<li><a href="Lab1.html#Referencias">Referencias</a> </li>
-		</ul>
+	<aside id="nav">
 		
-	</article>
+			<h2>Indice</h2>
+			<ul>
+				<li><a href="Lab1.html#Formulario">Formulario</a> </li>
+				<li><a href="Lab1.html#hobbies">Hobbies</a></li>
+				<li><a href="Lab1.html#Definiciones">Definiciones</a> </li>
+				<li><a href="Lab1.html#Preguntas">Preguntas</a> </li>
+				<li><a href="Lab1.html#PreguntasCSS">Preguntas de CSS</a></li>
+				<li><a href="Lab1.html#Referencias">Referencias</a> </li>
+			</ul>
+			
+		
+	</aside>
 	<br>
 	<br>
 	<hr>
