cambiar nombre carpeta

--- a/Laboratorios/Lab1.html
+++ b/Laboratorios/Lab1.html
@@ -6,9 +6,9 @@
 <head>
 	<link rel="stylesheet" href="lab3.css">
 </head>
-<body id="header">
+<body id="top">
 	<header>
-		<h1><a href="Lab1.html#header" id="inicio"> Laboratorio 1</a></h1>
+		<h1><a href="Lab1.html#top" id="inicio"> Laboratorio 1</a></h1>
 	</header>
 	<hr>
 
@@ -245,7 +245,20 @@
 	<br>
 	<hr>
 	<br>
+	<article id="javaScriptPruebas">
+		<form>
+			<input type="button" name="funcion 1" onclick="fun1()" value="Funcion 1">
+		</form>
+		
+	</article>
 
+	<article id="respuestajs">
+		
+	</article>
+	<br>
+	<br>
+	<hr>
+	<br>
 	<article id="referencias">
 		<h1>Referencias</h1>
 		<p>[1]T. Berners-Lee, "Hypertext Transfer Protocol -- HTTP/1.0", Rfc-editor.org, 1996. [Online]. Available: https://www.rfc-editor.org/rfc/rfc1945.txt. [Accessed: 12- Jan- 2018].</p>
@@ -264,7 +277,9 @@
 	<br>
 	<hr>
 	<br>
+
 	<footer>Esta pagina fue hecha con Sublime Text 3, el link a la pagina es: <a href="https://www.sublimetext.com">Sublime Text 3</a></footer>
 
 </body>
+<script src="Lab4.js"></script>
 </html>
