Agregar preguntas a Lab 4

--- a/Laboratorios/Lab4.html
+++ b/Laboratorios/Lab4.html
@@ -19,9 +19,28 @@
 		
 	</article>
 
+
 	<div id="respuestasjs">
 		
 	</div>
+	<article>
+		<strong>¿Qué diferencias y semejanzas hay entre Java y JavaScript?</strong>
+		<p>Pues java script tiene mayor flexibilidad en el manejo de variables ya que no tiene tipos de datos, sin embargo, al no ser compilable custa mas trabajo encontrar los errores cometidos</p>
+		<br>
+		<strong>¿Qué métodos tiene el objeto Date? </strong>
+		<p>getDate(), getDay(), getFullYear(), getHours(), getSeconds()</p>
+		<br>
+		<strong>¿Qué métodos tienen los arreglos?</strong>
+		<p>.toSting(), join(), pop(), push(), shift()</p>
+		<br>
+		<strong>¿Cómo se declara una variable con alcance local dentro de una función?</strong>
+		<p>var 'nombre';</p>
+		<br>
+		<strong>¿Qué implicaciones tiene utilizar variables globales dentro de funciones?</strong>
+		<p>que oueden afectar cualquier funcion</p>
+		<strong>¿Qué método de String se puede utilizar para buscar patrones con expresiones regulares?¿Para qué podrías utilizar esto en una aplicación web?</strong>
+		<p>search(), permitiria encontrar ciertas partes de la pagina como un buscador dentro del contenido de esta.</p>
+	</article>
 </body>
 <script src="Lab4.js"></script>
 </html>
