--- a/Laboratorios/Lab4.html
+++ b/Laboratorios/Lab4.html
@@ -14,7 +14,11 @@
 			<input type="button" name="funcion 3" onclick="contador(-5,-3,-8,0,1,3,4,1,2)" value="Contador">
 			<input type="button" name="funcion 4 " onclick="promedio([1,5,7,8],[5,8,9,10])" value="Calcular Promedio">
 			<input type="button" name="funcion 5" onclick="inverso(753)" value="Invertir Numero">
-			
+			<input type="button" name="mayor" onclick="mayor()" value="Mayor de edad">
+			<input type="button" name="resumen" onclick="resum()" value="Resumen de Pepe">
+			<article>
+				<p>La ultima funcion se encarga de leer un usuario e identificar si el usuario es mayor de edad y dar un resumen de este.</p>
+			</article>
 		</form>
 		
 	</article>
