Agregar password.css

--- a/Laboratorios/Lab 5/passsword.html
+++ b/Laboratorios/Lab 5/passsword.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 
 <head>
-	<link rel="stylesheet" href="lab3.css">
+	<link rel="stylesheet" href="passsword.css">
 </head>
 <body id="body">
 	<header>Validar Password</header>
@@ -15,7 +15,7 @@
 		</form>
 	</article>
 	<div id="respuestas">
-		<p>Hola</p>
+		<p>Pruebe una contraseña</p>
 	</div>
 </body>
 <script src="passsword.js"></script>
