agregar preguntas y cambiar nombre a libre

--- a/Laboratorios/Lab 5/preguntas_Libre.html
+++ b/Laboratorios/Lab 5/preguntas_Libre.html
@@ -9,13 +9,13 @@
 <body id="body">
 	<header>Mi Pagina</header>
 	<div class="tarjeta" id="1">
-		<h2 class="preguntas">Hola soy una tarjeta que tiene una pregunta muy interesante</h2>
+		<h2 class="preguntas">¿Por qué es una buena práctica usar JavaScript para checar que sean válidos los inputs de las formas antes de enviar los datos al servidor?</h2>
 	</div>
 	<div class="tarjeta" id="2">
-		<h2 class="preguntas">Hola soy una tarjeta que tiene una pregunta muy interesante</h2>
+		<h2 class="preguntas">¿Cómo puedes saltarte la seguridad de validaciones hechas con JavaScript?</h2>
 	</div>
 	<div class="tarjeta" id="3">
-		<h2 class="preguntas">Hola soy una tarjeta que tiene una pregunta muy interesante</h2>
+		<h2 class="preguntas">Si te puedes saltar la seguridad de las validaciones de JavaScript, entonces ¿por qué la primera pregunta dice que es una buena práctica?</h2>
 	</div>
 	<div class="tarjeta" id="4">
 		<h2 class="preguntas">Hola soy una tarjeta que tiene una pregunta muy interesante</h2>
