Agregar preguntas a Lab 7

--- a/Laboratorios/Lab 7/Lab7.html
+++ b/Laboratorios/Lab 7/Lab7.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body id="body">
+	
 	<div class="modal fade" tabindex="-1" role="dialog" id="modalPrueba">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
@@ -29,10 +30,19 @@
 
 	<nav class="navbar navbar-dark bg-dark position-sticky" id="minav">
 		<a class="nav-link active" href="#body">Home</a>
+		<a class="nav-link" href="#preguntas">Preguntas</a>
 	    <a class="nav-link" href="#carouselExampleControls">Carrusel</a>
 	    <a class="nav-link" href="#miForma">forma</a>
 	    <a class="nav-link disabled" href="#">En reparacion</a>
 	</nav>
+	<article id="preguntas">
+		<h2>Preguntas</h2>
+		<p><strong>Describe Material design</strong></p>
+		<p>Material Design es una normativa de diseño creada por Google con un enfoque para la visualizacion en Android, esta normativa fue presentada por google en una conferencia y lentamente han ido cambiando sus aplicaciones para poder apegarse a ella. El sistema se basa en 3`principios basicos, el material es una metafora, audaz, grafico e intencional, y el movimiento da significado.</p>
+	</article>
+	<br>
+	<br>
+	<br>
 	
 	<div class="alert alert-primary" role= "alert"> Esto es una alerta primaria, tendria que ser <strong>Azul</strong> o tal ves es <a href="#" class="alert-link">Azul</a></div>
 	<div class="alert alert-success alert-dismissible fade show" role="alert">
