--- a/Laboratorios/Lab 20/cliente.html
+++ b/Laboratorios/Lab 20/cliente.html
@@ -29,6 +29,7 @@
                       </div>
                 </div>
                 <button type="submit" name="enter" class="btn btn-primary pull-right" id="submit">Enter</button>
+                <button type="button" name="button" onclick="request()" class="btn btn-primary pull-right"></button>
               </div>
           <!--  </form>-->
 
